Tidy jdk package - final classes, getFirst, isEmpty, whitespace