@@ -32,7 +32,7 @@ import io.avaje.jex.security.BasicAuthCredentials;
 import io.avaje.jex.security.Role;
 import io.avaje.jex.spi.SpiContext;
 
-class JdkContext implements Context, SpiContext {
+final class JdkContext implements Context, SpiContext {
 
   private static final String UTF8 = "UTF8";
   private static final int SC_MOVED_TEMPORARILY = 302;
@@ -215,7 +215,7 @@ class JdkContext implements Context, SpiContext {
 
   private String header(Headers headers, String name) {
     final List<String> values = headers.get(name);
-    return (values == null || values.isEmpty()) ? null : values.get(0);
+    return (values == null || values.isEmpty()) ? null : values.getFirst();
   }
 
   @Override
@@ -237,7 +237,7 @@ class JdkContext implements Context, SpiContext {
   @Override
   public String queryParam(String name) {
     final List<String> vals = queryParams(name);
-    return vals == null || vals.isEmpty() ? null : vals.get(0);
+    return vals == null || vals.isEmpty() ? null : vals.getFirst();
   }
 
   private Map<String, List<String>> queryParams() {
@@ -263,7 +263,7 @@ class JdkContext implements Context, SpiContext {
     for (Map.Entry<String, List<String>> entry : map.entrySet()) {
       final List<String> value = entry.getValue();
       if (value != null && !value.isEmpty()) {
-        single.put(entry.getKey(), value.get(0));
+        single.put(entry.getKey(), value.getFirst());
       }
     }
     return single;
@@ -347,17 +347,14 @@ class JdkContext implements Context, SpiContext {
 
   @Override
   public Context write(String content) {
-
     write(content.getBytes(StandardCharsets.UTF_8));
     return this;
   }
 
   @Override
   public Context write(byte[] bytes) {
-
     try (var os = exchange.getResponseBody()) {
       exchange.sendResponseHeaders(statusCode(), bytes.length == 0 ? -1 : bytes.length);
-
       os.write(bytes);
       os.flush();
     } catch (IOException e) {
@@ -368,7 +365,6 @@ class JdkContext implements Context, SpiContext {
 
   @Override
   public Context write(InputStream is) {
-
     try (is; var os = outputStream()) {
       is.transferTo(os);
     } catch (IOException e) {
@@ -393,7 +389,7 @@ class JdkContext implements Context, SpiContext {
     for (Map.Entry<String, List<String>> entry : exchange.getRequestHeaders().entrySet()) {
       final List<String> value = entry.getValue();
       if (!value.isEmpty()) {
-        map.put(entry.getKey(), value.get(0));
+        map.put(entry.getKey(), value.getFirst());
       }
     }
     return map;
